[gd_scene load_steps=20 format=2]

[ext_resource path="res://materials/viewport_texture_monitor.shader" type="Shader" id=1]
[ext_resource path="res://materials/viewport_texture.shader" type="Shader" id=2]
[ext_resource path="res://scripts/room_props/monitor.gd" type="Script" id=3]
[ext_resource path="res://scripts/room_props/sticky_note.gd" type="Script" id=4]
[ext_resource path="res://models/room_props/sticky_note_text.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/room_props/monitor.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/room_props/sticky_note.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/screen.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/room_props/computer.tscn" type="PackedScene" id=9]
[ext_resource path="res://models/room_props/table.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/main_scene.gd" type="Script" id=11]
[ext_resource path="res://audio/computer_startup.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/ambience/computer_fan.ogg" type="AudioStream" id=13]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 0.0705882, 0.0470588, 0.129412, 1 )
glow_enabled = true
glow_bloom = 0.12
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true

[sub_resource type="Animation" id=6]
resource_name = "Startup"
length = 25.0
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 0.01, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sound/SoundStartup")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Monitor/Cube:material/3:shader_param/screen_brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 8.5, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/scanline_height = 4
shader_param/scanline_darkness = 0.6
shader_param/screen_brightness = 1.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/uv_offset = Vector2( -0.106, -0.106 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.435294, 0.396078, 0.372549, 1 )

[node name="Scene" type="Spatial"]
script = ExtResource( 11 )
startup_sequence = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Startup = SubResource( 6 )

[node name="Monitor" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
script = ExtResource( 3 )
mouse_bounds = Rect2( 258, 78, 755, 579 )

[node name="Cube" parent="Monitor" index="0"]
material/3 = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.212, 4, 4 )
current = true
fov = 30.0

[node name="StickyNote" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 0.999987, 0.00513125, 0, -0.00513125, 0.999987, 0.997252, 4.21099, 0.959464 )
script = ExtResource( 4 )
note_contents = "Here is some sample text
on this here sticky note
You find those files for this person
Or you're gonna go broke"

[node name="Cube004" parent="StickyNote" index="0"]
transform = Transform( 1.52156, 0, 0, 0, 1.52156, 0, 0, 0, 1.52156, -0.0278233, -0.00016883, 0.0329074 )
material/0 = SubResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 722, 402 )
render_target_v_flip = true

[node name="Screen" parent="Viewport" instance=ExtResource( 8 )]

[node name="ViewportNote" type="Viewport" parent="."]
size = Vector2( 700, 700 )
render_target_v_flip = true

[node name="StickyNoteText" parent="ViewportNote" instance=ExtResource( 5 )]

[node name="Props" type="Spatial" parent="."]

[node name="Computer" parent="Props" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.61382, 0 )

[node name="Table" parent="Props" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.09324, 0 )

[node name="Wall" type="MeshInstance" parent="Props"]
transform = Transform( 8, 0, 0, 0, 1, 0, 0, 0, 9.3, 0, -1.27135, 6 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall2" type="MeshInstance" parent="Props"]
transform = Transform( 8, 0, 0, 0, 1, 0, 0, 0, 9.3, 0, 10.7286, 6 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall3" type="MeshInstance" parent="Props"]
transform = Transform( 8, 0, 0, 0, 9, 0, 0, 0, 0.93, 0, 4.72865, -4 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall4" type="MeshInstance" parent="Props"]
transform = Transform( 8, 0, 0, 0, 9, 0, 0, 0, 0.93, 0, 4.72865, 16 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall5" type="MeshInstance" parent="Props"]
transform = Transform( -3.49691e-07, 0, -0.93, 0, 9, 0, 10.4, 0, -5.2847e-08, -9, 4.72865, 6 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall6" type="MeshInstance" parent="Props"]
transform = Transform( -3.49691e-07, 0, -0.93, 0, 9, 0, 10.4, 0, -5.2847e-08, 9, 4.72865, 6 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.211628, 4, 0.597245 )
light_energy = 0.68
shadow_bias = 12.63
spot_range = 9.0
spot_angle = 79.2

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0290202, 4, 1.83673 )
light_energy = 0.2
shadow_enabled = true

[node name="Sound" type="Node" parent="."]

[node name="SoundStartup" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 12 )

[node name="SoundComputerFan" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 13 )
[connection signal="finished" from="Sound/SoundStartup" to="Sound/SoundComputerFan" method="play"]

[editable path="Monitor"]

[editable path="StickyNote"]

[editable path="ViewportNote/StickyNoteText"]
